@@ -25,7 +25,7 @@ import org.apache.hadoop.hive.serde2.objectinspector.StructObjectInspector;
 
 /**
  * A Generic User-defined Table Generating Function (UDTF)
- * 
+ *
  * Generates a variable number of output rows for a single input row. Useful for
  * explode(array)...
  */
@@ -35,7 +35,7 @@ public abstract class GenericUDTF {
 
   /**
    * Initialize this GenericUDTF. This will be called only once per instance.
-   * 
+   *
    * @param args
    *          An array of ObjectInspectors for the arguments
    * @return A StructObjectInspector for output. The output struct represents a
@@ -48,16 +48,15 @@ public abstract class GenericUDTF {
 
   /**
    * Give a set of arguments for the UDTF to process.
-   * 
+   *
    * @param o
    *          object array of arguments
    */
   public abstract void process(Object[] args) throws HiveException;
 
   /**
-   * Called to notify the UDTF that there are no more rows to process. Note that
-   * forward() should not be called in this function. Only clean up code should
-   * be run.
+   * Called to notify the UDTF that there are no more rows to process.
+   * Clean up code or additional forward() calls can be made here.
    */
   public abstract void close() throws HiveException;
 
@@ -65,7 +64,7 @@ public abstract class GenericUDTF {
    * Associates a collector with this UDTF. Can't be specified in the
    * constructor as the UDTF may be initialized before the collector has been
    * constructed.
-   * 
+   *
    * @param collector
    */
   public final void setCollector(Collector collector) {
@@ -74,7 +73,7 @@ public abstract class GenericUDTF {
 
   /**
    * Passes an output row to the collector.
-   * 
+   *
    * @param o
    * @throws HiveException
    */
